<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SUTD Staff Room Maps</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_hint">Type a name or location</string>
	<string name="search_btn_text">Go</string>
	<string name="some_dummy_text">Lorem Ipsum</string>
	<string name="level_text">level</string>
	<string name="level_4">4</string>
	<string name="level_3">3</string>
	<string name="level_2">2</string>
	<string name="search_clear_text">X</string>
</resources>
