<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <WebView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scrollbars="none" />

    <ImageView
        android:id="@+id/semi_trans_overlay"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:alpha=".85"
        android:contentDescription="@string/some_dummy_text"
        android:scaleType="fitXY"
        android:src="@drawable/semi_trans_overlay" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/searchField"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:hint="@string/search_btn_text"
        android:onClick="searchButtonClicked" />

    <AutoCompleteTextView
        android:id="@+id/searchField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/searchButton"
        android:ems="10"
        android:hint="@string/search_hint"
        android:imeOptions="actionDone"
        android:singleLine="true" />

    <ImageView
        android:id="@+id/description_overlay2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/semi_trans_overlay"
        android:alpha=".5"
        android:contentDescription="@string/some_dummy_text"
        android:scaleType="fitXY"
        android:src="@drawable/description_overlay" />

    <TextView
        android:id="@+id/meeting_room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/semi_trans_overlay"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="9dp"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/description_overlay"
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/semi_trans_overlay"
        android:alpha=".5"
        android:contentDescription="@string/some_dummy_text"
        android:scaleType="fitXY"
        android:src="@drawable/description_overlay" />

    <TextView
        android:id="@+id/room_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/semi_trans_overlay"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2.8dp"
        android:alpha=".9"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/staff_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/semi_trans_overlay"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="9dp"
        android:layout_toRightOf="@+id/room_id"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textSize="23sp" />

    <Button
        android:id="@+id/scroll_staff_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/description_overlay"
        android:layout_alignLeft="@+id/description_overlay"
        android:layout_alignRight="@+id/description_overlay"
        android:layout_alignTop="@+id/staff_name"
        android:alpha=".6"
        android:background="@android:color/transparent"
        android:onClick="scrollStaffName" />

    <TextView
        android:id="@+id/staff_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/semi_trans_overlay"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="35dp"
        android:layout_toRightOf="@+id/room_id"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:lines="1"
        android:marqueeRepeatLimit="marquee_forever"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/fader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/some_dummy_text"
        android:scaleType="fitXY"
        android:src="@drawable/fader" />

    <TextView
        android:id="@+id/level_text_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="15dp"
        android:alpha=".6"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="18"
        android:text="@string/level_text"
        android:textSize="14sp" />

    <Button
        android:id="@+id/level_2_btn_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/level_text_h"
        android:alpha=".6"
        android:background="@android:color/transparent"
        android:onClick="level2Pressed"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="18"
        android:text="@string/level_2"
        android:textColor="#555555"
        android:textSize="28sp" />

    <Button
        android:id="@+id/level_3_btn_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-4dp"
        android:layout_toRightOf="@+id/level_2_btn_h"
        android:alpha=".6"
        android:background="@android:color/transparent"
        android:onClick="level3Pressed"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="18"
        android:text="@string/level_3"
        android:textColor="#555555"
        android:textSize="28sp" />

    <Button
        android:id="@+id/level_4_btn_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-4dp"
        android:layout_toRightOf="@+id/level_3_btn_h"
        android:alpha=".6"
        android:background="@android:color/transparent"
        android:onClick="level4Pressed"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="18"
        android:text="@string/level_4"
        android:textColor="#555555"
        android:textSize="28sp" />

    <Button
        android:id="@+id/level_2_btn_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="-5dp"
        android:alpha=".6"
        android:background="@android:color/transparent"
        android:onClick="level2Pressed"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="18"
        android:text="@string/level_2"
        android:textColor="#555555"
        android:textSize="28sp" />

    <Button
        android:id="@+id/level_3_btn_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/level_2_btn_v"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="-5dp"
        android:alpha=".6"
        android:background="@android:color/transparent"
        android:onClick="level3Pressed"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="18"
        android:text="@string/level_3"
        android:textColor="#555555"
        android:textSize="28sp" />

    <Button
        android:id="@+id/level_4_btn_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/level_3_btn_v"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="-5dp"
        android:alpha=".6"
        android:background="@android:color/transparent"
        android:onClick="level4Pressed"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="18"
        android:text="@string/level_4"
        android:textColor="#555555"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/level_text_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/level_4_btn_v"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="12.5dp"
        android:alpha=".6"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="18"
        android:text="@string/level_text" />

    <TextView
        android:id="@+id/level_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/some_dummy_text" />

    <ImageView
        android:id="@+id/searchClearTabber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/semi_trans_overlay"
        android:alpha="0.93"
        android:contentDescription="@string/some_dummy_text"
        android:src="@drawable/tabblet" />

    <Button
        android:id="@+id/searchClearButton"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignLeft="@+id/searchButton"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/searchButton"
        android:layout_marginTop="-2dp"
        android:background="@android:color/transparent"
        android:onClick="searchClearButtonClicked"
        android:text="@string/search_clear_text"
        android:textColor="#C7542A"
        android:textSize="24sp" />

    <RelativeLayout
        android:id="@+id/tutorial"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ImageView
            android:id="@+id/up_arrow"
            android:layout_width="260.7dp"
            android:layout_height="110.7dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="29dp"
            android:alpha=".9"
            android:contentDescription="@string/some_dummy_text"
            android:scaleType="fitXY"
            android:src="@drawable/up_arrow" />

        <ImageView
            android:id="@+id/down_arrow_v"
            android:layout_width="198dp"
            android:layout_height="120dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="70dp"
            android:layout_marginLeft="58dp"
            android:contentDescription="@string/some_dummy_text"
            android:scaleType="fitXY"
            android:src="@drawable/down_arrow" />

        <ImageView
            android:id="@+id/down_arrow_h"
            android:layout_width="198dp"
            android:layout_height="120dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="233dp"
            android:contentDescription="@string/some_dummy_text"
            android:scaleType="fitXY"
            android:src="@drawable/down_arrow" />
    </RelativeLayout>

</RelativeLayout>